# cto-new

./: .gitignore  CONTRIBUTING.md  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yml
backend/: .env.example  README.md  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_migration.py
backend/app/: main.py
backend/app/api/v1/: auth.py  deps.py
backend/app/core/: config.py  security.py
backend/app/models/: user.py
backend/app/schemas/: __init__.py  user.py
backend/tests/: test_auth.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/: ProtectedRoute.tsx
frontend/src/components/layout/: Footer.tsx  Header.tsx  Layout.tsx
frontend/src/components/ui/: Accordion.tsx  Avatar.tsx  Badge.tsx  Button.tsx  Dialog.tsx  Icons.tsx  Input.tsx  Progress.tsx  Separator.tsx  Sheet.tsx  Skeleton.tsx  Tabs.tsx  Textarea.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: About.tsx  Careers.tsx  Contact.tsx  Dashboard.tsx  Home.tsx  Portfolio.tsx  Pricing.tsx  Services.tsx
frontend/src/pages/auth/: Login.tsx  Register.tsx
frontend/src/services/: auth.ts
frontend/src/store/: authStore.ts
frontend/src/types/: auth.ts
